creating of component with CLI  and including importing that components for use in another component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,7 @@
     <mat-card-subtitle>Topic Covered</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime explicabo itaque culpa impedit,
-    exercitationem laborum, alias quae, ipsa dicta accusamus a voluptatibus. Officia tenetur temporibus laborum veniam
-    iste delectus voluptas! Corrupti rerum impedit sed asperiores maiores voluptatum eligendi ea laboriosam error
-    voluptates. Natus, ipsam debitis quaerat illum sit quasi.
+    <app-home></app-home>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Learn More</button>
