--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <mat-card appearance="outlined">
   <mat-card-header>
-    <mat-card-title>Angular 18</mat-card-title>
-    <mat-card-subtitle>Topic Covered</mat-card-subtitle>
+    <mat-card-title> {{title}} </mat-card-title>
+    <mat-card-subtitle> {{subTitle}} </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <app-home></app-home>
