--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,18 @@
 
 <mat-card appearance="outlined">
   <mat-card-header>
-    <mat-card-title> {{title}} </mat-card-title>
-    <mat-card-subtitle> {{subTitle}} </mat-card-subtitle>
+    <mat-card-title> {{title | uppercase}} </mat-card-title>
+    <mat-card-subtitle> {{subTitle | lowercase}} </mat-card-subtitle>
+ 
   </mat-card-header>
   <mat-card-content>
     <app-home></app-home>
+
+    <span> {{todayDate | date:"dd/MMM/yy" }} </span> <br>
+    <span> {{salary | currency:'EUR'}} </span> <br>
+    <span> {{salary | number:'1.2-2'}} </span> <br>
+    <span> {{person | json }} </span> <br>
+    <span> {{number | percent}} </span>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Learn More</button>
