--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,8 @@
     <span> {{salary | currency:'EUR'}} </span> <br>
     <span> {{salary | number:'1.2-2'}} </span> <br>
     <span> {{person | json }} </span> <br>
-    <span> {{number | percent}} </span>
+    <span> {{number | percent}} </span> <br>
+    <span> {{title | reverse}} </span>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Learn More</button>
