--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,10 @@
     <span> {{todayDate | date:"dd/MMM/yy" }} </span> <br>
     <span> {{salary | currency:'EUR'}} </span> <br>
     <span> {{salary | number:'1.2-2'}} </span> <br>
-    <span> {{person | json }} </span> <br>
+    <span> {{_obj | json }} </span> <br>
     <span> {{number | percent}} </span> <br>
-    <span> {{title | reverse}} </span>
+    <span> {{title | reverse}} </span> <br>
+    <input type="checkbox" [disabled]="isDisabled" [checked]="isDisabled">
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Learn More</button>
