--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,12 @@
     <span> {{_obj | json }} </span> <br>
     <span> {{number | percent}} </span> <br>
     <span> {{title | reverse}} </span> <br>
-    <input type="checkbox" [disabled]="isDisabled" [checked]="isDisabled">
+    <input type="checkbox" [disabled]="isDisabled" [checked]="isDisabled"> <br>
+    <!-- <input type="text" (keyup)="updateTitle($event)"> <br> <br> -->
+    <input type="text" [(ngModel)]="title"> <br> <br>
+    <button (click)="changeTitle()">Click Here</button>
   </mat-card-content>
-  <mat-card-actions>
+  <!-- <mat-card-actions>
     <button mat-button>Learn More</button>
-  </mat-card-actions>
+  </mat-card-actions> -->
 </mat-card>
