--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,22 @@
+<mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Angular 18</span>
+    <span class="example-spacer"></span>
+    <button mat-button routerLink="">Home</button>
+    <button mat-button routerLink="about">About</button>
+    <button mat-button routerLink="contact">Contact</button>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>share</mat-icon>
+    </button>
+</mat-toolbar>
+  
+
 <router-outlet />
 
-<mat-card appearance="outlined">
-  <mat-card-header>
-    <mat-card-title> {{title | uppercase}} </mat-card-title>
-    <mat-card-subtitle> {{subTitle | lowercase}} </mat-card-subtitle>
- 
-  </mat-card-header>
-  <mat-card-content>
-    <app-home></app-home>
 
-    <span> {{todayDate | date:"dd/MMM/yy" }} </span> <br>
-    <span> {{salary | currency:'EUR'}} </span> <br>
-    <span> {{salary | number:'1.2-2'}} </span> <br>
-    <span> {{_obj | json }} </span> <br>
-    <span> {{number | percent}} </span> <br>
-    <span> {{title | reverse}} </span> <br>
-    <input type="checkbox" [disabled]="isDisabled" [checked]="isDisabled"> <br>
-    <!-- <input type="text" (keyup)="updateTitle($event)"> <br> <br> -->
-    <input type="text" [(ngModel)]="title"> <br> <br>
-    <button (click)="changeTitle()">Click Here</button>
-  </mat-card-content>
-  <!-- <mat-card-actions>
-    <button mat-button>Learn More</button>
-  </mat-card-actions> -->
-</mat-card>
