created child authentication component Implemented canActivateChild on children component for customer

--- a/src/app/pages/customer/customer.component.html
+++ b/src/app/pages/customer/customer.component.html
@@ -1,2 +1,4 @@
 <p>customer works!</p>
+<button mat-button routerLink="/customer/add-customer">Add</button>
+<button mat-button routerLink="/customer/edit-customer/001">Edit</button>
 <router-outlet></router-outlet>
