--- a/src/app/pages/customer/customer.component.html
+++ b/src/app/pages/customer/customer.component.html
@@ -1,4 +1,6 @@
 <p>customer works!</p>
 <button mat-button routerLink="/customer/add-customer">Add</button>
-<button mat-button routerLink="/customer/edit-customer/001">Edit</button>
+<button mat-button routerLink="/customer/edit-customer/001">Edit</button> <br>
+<input type="text" [(ngModel)]="userinput">
+
 <router-outlet></router-outlet>
