--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         <span> {{number | percent}} </span> <br>
         <span> {{title | reverse}} </span> <br>
         <input type="checkbox" [disabled]="isDisabled" [checked]="isDisabled"> <br>
-        <!-- <input type="text" (keyup)="updateTitle($event)"> <br> <br> -->
+         <input type="text" (keyup)="updateTitle($event)"> <br> <br>
         <input type="text" [(ngModel)]="title"> <br> <br>
         <button (click)="changeTitle()">Click Here</button>
     </mat-card-content>
