--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<form class="example-form" #loginForm="ngForm" (ngSubmit)="proceedToLogin(loginForm)">
+    <mat-card>
+        <mat-card-header>
+            <h2>Login</h2>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-form-field class="example-full-width">
+                <mat-label>Username</mat-label>
+                <input matInput required type="text" placeholder="Username" #username="ngModel" [(ngModel)]="_loginData.username" name="username">
+                <div *ngIf="username.invalid && username.touched">The username field is required</div>
+            </mat-form-field>
+
+            <mat-form-field class="example-full-width">
+                <mat-label>Password</mat-label>
+                <input matInput required type="password" #password="ngModel" placeholder="Password" [(ngModel)]="_loginData.password" name="password">
+                <div *ngIf="password.invalid && password.touched">The username field is required</div>
+            </mat-form-field>
+
+        </mat-card-content>
+        <mat-card-actions>
+            <!-- <button type="submit" mat-raised-button color="primary">Login</button>-->
+            <button type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Login</button> 
+            <button type="reset" mat-raised-button color="accent">Cancel</button>
+        </mat-card-actions>
+    </mat-card>
+</form>
