adding authGaud to routes implementing isLoggedin method saving identity on successful login

--- a/src/app/appmenu/appmenu.component.html
+++ b/src/app/appmenu/appmenu.component.html
@@ -1,18 +1,18 @@
 <mat-toolbar color="primary" *ngIf="showMenu">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Angular 18</span>
-    <span class="example-spacer"></span>
-    <button mat-button routerLink="">Home</button>
-    <button mat-button routerLink="about">About</button>
-    <button mat-button routerLink="contact">Contact</button>
-    <button mat-button routerLink="customer">Customer</button>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Angular 18</span>
+  <span class="example-spacer"></span>
+  <button mat-button routerLink="home">Home</button>
+  <button mat-button routerLink="about">About</button>
+  <button mat-button routerLink="contact">Contact</button>
+  <button mat-button routerLink="customer">Customer</button>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button routerLink="login" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>arrow_forward</mat-icon>
+  </button>
 </mat-toolbar>
