--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,12 +1,13 @@
-.mat-mdc-card{
-    width: 40%;
-    margin-left: 25%;
+.mat-mdc-card {
+  width: 40%;
+  margin-left: 30%;
+  margin-top: 5%;
 }
 
-.mat-mdc-form-field{
-    width: 100%;
+.mat-mdc-form-field {
+  width: 100%;
 }
 
-.mdc-button{
-    margin: 2%;
+.mdc-button {
+  margin: 2%;
 }
