--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,7 +20,7 @@
         <mat-card-actions>
             <!-- <button type="submit" mat-raised-button color="primary">Login</button>-->
             <button type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Login</button> 
-            <button type="reset" mat-raised-button color="accent">Cancel</button>
+            <a routerLink="/register" type="reset" mat-raised-button color="accent">New User?</a>
         </mat-card-actions>
     </mat-card>
  </form>
