--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register works!</p>
+<form class="example-form" (ngSubmit)="proceedRegister()">
+    <mat-card>
+        <mat-card-header>
+            <h2>New Registration</h2>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-form-field class="example-full-width">
+                <mat-label>Username</mat-label>
+                <input matInput type="text" placeholder="Username">
+            </mat-form-field>
+
+        </mat-card-content>
+        <mat-card-actions>
+            <button type="submit" mat-raised-button color="primary">Register</button>
+            <a routerLink="/login" type="reset" mat-raised-button color="accent">Login</a>
+        </mat-card-actions>
+    </mat-card>
+</form>
