--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -20,8 +20,13 @@
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
+                <mat-label>Password</mat-label>
+                <input matInput type="password" placeholder="Password" formControlName="password">
+            </mat-form-field>
+
+            <mat-form-field class="example-full-width">
                 <mat-label>Role</mat-label>
-                <mat-select>
+                <mat-select formControlName="role">
                     @for (item of roles; track item) {
                     <mat-option [value]="item.value">{{item.viewValue}}</mat-option>
                     }
@@ -29,7 +34,7 @@
             </mat-form-field>
 
             <div>
-                <mat-radio-group aria-label="Select an option">
+                <mat-radio-group aria-label="Select an option" formControlName="gender">
                     <mat-radio-button color="primary" value="m">Male</mat-radio-button>
                     <mat-radio-button value="f">Female</mat-radio-button>
                 </mat-radio-group>
@@ -37,15 +42,16 @@
 
             <div>
                 <section class="example-section">
-                    <mat-checkbox color="primary" class="example-margin">Terms and Conditions Agreement</mat-checkbox>
+                    <mat-checkbox color="primary" class="example-margin" formControlName="terms">Terms and Conditions
+                        Agreement</mat-checkbox>
                 </section>
             </div>
 
 
         </mat-card-content>
         <mat-card-actions>
-            <button type="submit" mat-raised-button color="primary">Register</button>
             <a routerLink="/login" type="reset" mat-raised-button color="accent">Login</a>
+            <button type="submit" mat-raised-button color="primary">Register</button>
         </mat-card-actions>
     </mat-card>
 </form>
