--- a/src/app/appmenu/appmenu.component.html
+++ b/src/app/appmenu/appmenu.component.html
@@ -8,6 +8,7 @@
   <button mat-button routerLink="about">About</button>
   <button mat-button routerLink="contact">Contact</button>
   <button mat-button routerLink="customer">Customer</button>
+  <button mat-button routerLink="product">Product</button>
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
