Creating, Updating. Deleting of products installing of toaster package for notifications

--- a/src/app/pages/product/product.component.css
+++ b/src/app/pages/product/product.component.css
@@ -3,6 +3,17 @@
   color: white;
 }
 
-.mdc-button{
+.mdc-button {
   margin: 2px;
+}
+
+mat-card-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* styles.css or component CSS */
+.mat-table-responsive {
+  width: 100%;
+  overflow-x: auto;
 }
