--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,9 +1,10 @@
 <mat-card>
     <mat-card-header>
         <h2>Product Listing</h2>
+        <button mat-raised-button color="primary" (click)="Createproduct()">Add New (+)</button>
     </mat-card-header>
     <mat-card-content>
-        <div class="mat-elevation-z8">
+        <div class="mat-elevation-z8 mat-table-responsive">
             <table mat-table [dataSource]="dataSource" matSort>
 
                 <!-- ID Column -->
@@ -41,8 +42,10 @@
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary">Edit</button>
-                        <button mat-raised-button color="accent">Delete</button>
+                        <div style="display: flex; gap: 8px;">
+                            <button mat-raised-button color="primary" (click)="EditProduct(element.id)">Edit</button>
+                            <button mat-raised-button color="accent" (click)="DeleteProduct(element.id)">Delete</button>
+                        </div>
                     </td>
                 </ng-container>
 
@@ -55,7 +58,7 @@
                 </tr>
             </table>
 
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons
+            <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons
                 aria-label="Select page of periodic elements">
             </mat-paginator>
         </div>
