completed reusable layouts

--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,1 +1,8 @@
-<p>auth works!</p>
+<div class="row m-0">
+    <div class="col-5 image-column">
+
+    </div>
+    <div class="col-6 d-flex align-items-center justify-content-center">
+        <router-outlet></router-outlet>
+    </div>
+</div>
